--- a/src/packages.config
+++ b/src/packages.config
@@ -13,6 +13,8 @@
   <package id="BouncyCastle" version="1.8.5" targetFramework="net472" />
   <package id="CommonMark.NET" version="0.15.1" targetFramework="net472" />
   <package id="Dapper" version="2.0.30" targetFramework="net472" />
+  <package id="dbup-core" version="4.4.0" targetFramework="net472" />
+  <package id="dbup-sqlserver" version="4.4.0" targetFramework="net472" />
   <package id="DocumentFormat.OpenXml" version="2.10.1" targetFramework="net472" />
   <package id="Fizzler" version="1.2.0" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.11.23" targetFramework="net472" />
@@ -40,6 +42,7 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.Azure.NotificationHubs" version="3.3.0" targetFramework="net472" />
+  <package id="Microsoft.Azure.Services.AppAuthentication" version="1.3.1" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.Caching.Abstractions" version="3.1.3" targetFramework="net472" />
@@ -48,6 +51,7 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.3" targetFramework="net472" />
   <package id="Microsoft.Extensions.Options" version="3.1.3" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="3.1.3" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="4.3.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.6.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Logging" version="5.6.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Tokens" version="5.6.0" targetFramework="net472" />
